# genpdf-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.builds/: archlinux-msrv.yml  archlinux.yml
examples/: demo.pdf.license  demo.rs
src/: elements.rs  error.rs  fonts.rs  lib.rs  render.rs  style.rs  wrap.rs
